; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_encode_getattr_one.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_encode_getattr_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.compound_hdr = type { i32, i32 }

@OP_GETATTR = common dso_local global i32 0, align 4
@decode_getattr_maxsz = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, i32, %struct.compound_hdr*)* @encode_getattr_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_getattr_one(%struct.xdr_stream* %0, i32 %1, %struct.compound_hdr* %2) #0 {
  %4 = alloca %struct.xdr_stream*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.compound_hdr*, align 8
  %7 = alloca i8**, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.compound_hdr* %2, %struct.compound_hdr** %6, align 8
  %8 = load %struct.xdr_stream*, %struct.xdr_stream** %4, align 8
  %9 = call i8** @reserve_space(%struct.xdr_stream* %8, i32 12)
  store i8** %9, i8*** %7, align 8
  %10 = load i32, i32* @OP_GETATTR, align 4
  %11 = call i8* @cpu_to_be32(i32 %10)
  %12 = load i8**, i8*** %7, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i32 1
  store i8** %13, i8*** %7, align 8
  store i8* %11, i8** %12, align 8
  %14 = call i8* @cpu_to_be32(i32 1)
  %15 = load i8**, i8*** %7, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i32 1
  store i8** %16, i8*** %7, align 8
  store i8* %14, i8** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i8* @cpu_to_be32(i32 %17)
  %19 = load i8**, i8*** %7, align 8
  store i8* %18, i8** %19, align 8
  %20 = load %struct.compound_hdr*, %struct.compound_hdr** %6, align 8
  %21 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %21, align 4
  %24 = load i64, i64* @decode_getattr_maxsz, align 8
  %25 = load %struct.compound_hdr*, %struct.compound_hdr** %6, align 8
  %26 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = sext i32 %27 to i64
  %29 = add nsw i64 %28, %24
  %30 = trunc i64 %29 to i32
  store i32 %30, i32* %26, align 4
  ret void
}

declare dso_local i8** @reserve_space(%struct.xdr_stream*, i32) #1

declare dso_local i8* @cpu_to_be32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
